--- a/old/old-1.html
+++ b/old/old-1.html
@@ -68,7 +68,7 @@
 <h1> </h1><br>
 <h1> </h1><br>
 <h1> </h1><br>
-<a href=../mainhtml.html>トップへ戻る</a>
+<a href=../index.html>トップへ戻る</a>
 <h1> </h1><br>
 <h1> </h1><br>
 <h1> </h1><br>
